<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.listofbooksandfilms.AddNewElement"
    android:id="@+id/new_element_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/new_element_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_book_title"
        android:textSize="36sp"
        android:fontFamily="sans-serif-thin"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/booksDark"
        android:clickable="false"/>

    <EditText android:id="@+id/new_main_text"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/new_book_main_text_hint"
        android:textSize="24sp"
        android:textColor="@color/booksMainText"
        android:fontFamily="sans-serif-regular"
        android:layout_below="@id/new_element_title"
        android:maxLines="2"/>

    <EditText android:id="@+id/new_additional_text"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_alignLeft="@id/new_main_text"
        android:layout_alignStart="@id/new_main_text"
        tools:hint="example hint"
        android:textSize="16sp"
        android:textColor="#212121"
        android:layout_below="@id/new_main_text"
        android:fontFamily="sans-serif-regular"
        android:maxLines="2"/>

    <TextView android:id="@+id/rate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_additional_text"
        android:layout_marginTop="32dp"
        android:layout_alignLeft="@id/rate_view"
        android:layout_alignStart="@id/rate_view"
        android:textColor="@color/booksDark"
        android:textSize="16sp"
        android:text="@string/new_book_rate_title"
        android:fontFamily="sans-serif-light"/>

    <TextView android:id="@+id/rate_view"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_below="@id/rate_title"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textSize="40dp"
        android:gravity="bottom"
        tools:text="\u25CB\u25CB\u25CB\u25CB\u25CB"
        tools:ignore="SpUsage"
        android:text="">
     </TextView>

    <TextView android:id="@+id/good_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/rate_title"
        android:text="@string/new_book_good_title"
        android:textColor="@color/booksDark"
        android:textSize="16sp"
        android:fontFamily="sans-serif-light"
        android:layout_alignLeft="@id/good_checkbox"
        android:layout_alignStart="@id/good_checkbox" />

    <CheckBox android:id="@+id/good_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/rate_view"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"/>

    <TextView android:id="@+id/new_element_accept_button"
        android:fontFamily="sans-serif-light"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginRight="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:textSize="18sp"
        android:text="@string/new_book_add_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="true"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"/>

    <TextView android:id="@+id/new_element_decline_button"
        android:fontFamily="sans-serif-light"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_toLeftOf="@id/new_element_accept_button"
        android:layout_toStartOf="@id/new_element_accept_button"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="18sp"
        android:text="@string/new_book_decline_button"
        android:layout_alignParentBottom="true"
        android:textAllCaps="true"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"/>

    <EditText android:id="@+id/new_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:maxLines="6"
        android:minLines="2"
        android:gravity="top"
        android:layout_alignLeft="@id/good_checkbox"
        android:layout_alignStart="@id/good_checkbox"
        android:layout_alignEnd="@id/rate_view"
        android:layout_alignRight="@id/rate_view"
        android:layout_below="@id/good_checkbox"
        android:background="@color/descriptionBackground"
        android:hint="@string/new_book_description_hint"
        android:padding="8dp"
        android:layout_marginTop="32dp"
        android:textSize="14sp"
        android:textColor="@color/descriptionText"/>

    <TextView android:id="@+id/new_element_edit_button"
        android:fontFamily="sans-serif-light"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="18sp"
        android:text="@string/new_book_edit_button"
        android:layout_alignParentBottom="true"
        android:textAllCaps="true"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"/>

    <TextView android:id="@+id/new_element_delete_button"
        android:fontFamily="sans-serif-light"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/delete"
        android:textSize="18sp"
        android:text="@string/new_book_delete_button"
        android:layout_alignParentBottom="true"
        android:textAllCaps="true"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"/>
</RelativeLayout>
